[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/TilePlus.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/MenuIcon.png" type="Texture" id=4]
[ext_resource path="res://Scripts/StartButton.gd" type="Script" id=5]
[ext_resource path="res://Assets/fonts/SourceCodePro-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/ResetArrow.png" type="Texture" id=7]
[ext_resource path="res://Assets/QuestionMark.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=4]
modulate_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=14]
size = 44
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "dilate"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "start"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_bloom = 0.1
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Tiling" type="TextureRect" parent="."]
modulate = Color( 0.203922, 0.203922, 0.203922, 1 )
margin_left = -4720.0
margin_top = -3280.0
margin_right = 6837.0
margin_bottom = 4795.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="PositionIndicator" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1
split_offset = 1500

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/HSplitContainer"]
margin_right = 1500.0
margin_bottom = 1080.0
mouse_filter = 2
split_offset = 900

[node name="Control" type="Control" parent="CanvasLayer/HSplitContainer/VSplitContainer"]
margin_right = 1500.0
margin_bottom = 900.0
mouse_filter = 2

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/HSplitContainer/VSplitContainer"]
margin_top = 912.0
margin_right = 1500.0
margin_bottom = 1080.0
mouse_filter = 2
custom_styles/normal = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HSplitContainer"]
margin_left = 1512.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_clip_content = true
mouse_filter = 1

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer/HSplitContainer/MarginContainer"]
margin_right = 408.0
margin_bottom = 1080.0
stretch = true

[node name="Viewport" type="Viewport" parent="CanvasLayer/HSplitContainer/MarginContainer/ViewportContainer"]
size = Vector2( 408, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Top" type="ColorRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 80.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="StartButton" type="Button" parent="CanvasLayer"]
margin_left = 800.0
margin_right = 1040.0
margin_bottom = 160.0
mouse_filter = 1
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
script = ExtResource( 5 )

[node name="Polygon2D" type="Polygon2D" parent="CanvasLayer/StartButton"]
position = Vector2( -801, 0 )
color = Color( 0.121569, 0.592157, 0.152941, 0.72549 )
polygon = PoolVector2Array( 720, 0, 800, 160, 1040, 160, 1120, 0 )

[node name="Line2D" type="Line2D" parent="CanvasLayer/StartButton"]
position = Vector2( -801, 0 )
points = PoolVector2Array( 720, 0, 800, 160, 1040, 160, 1120, 0 )
width = 5.0
default_color = Color( 0.803922, 0.815686, 0.878431, 1 )

[node name="Label" type="Label" parent="CanvasLayer/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 14 )
text = "Run"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/StartButton"]
anims/RESET = SubResource( 10 )
anims/dilate = SubResource( 11 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 2000.0
margin_bottom = 1120.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
autoplay = "start"
anims/RESET = SubResource( 12 )
anims/start = SubResource( 13 )

[node name="ResetButton" type="Button" parent="CanvasLayer"]
margin_left = 1840.0
margin_right = 1920.0
margin_bottom = 80.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ResetButton"]
modulate = Color( 0.482353, 0.878431, 0.235294, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="MenuButton" type="Button" parent="CanvasLayer"]
margin_right = 80.0
margin_bottom = 80.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MenuButton"]
modulate = Color( 0.392157, 0.854902, 0.352941, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="HelpButton" type="Button" parent="CanvasLayer"]
modulate = Color( 0.92549, 0.682353, 0.109804, 1 )
margin_left = 1760.0
margin_right = 1840.0
margin_bottom = 80.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/HelpButton"]
visible = false
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 2
color = Color( 0.713726, 0.101961, 0.101961, 0.447059 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HelpButton"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="LineN" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
z_index = -6
points = PoolVector2Array( 0, 0, 0, -10000 )
width = 2.0
default_color = Color( 0.34902, 1, 0.27451, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LineE" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
z_index = -6
points = PoolVector2Array( 0, 0, 10000, 0 )
width = 2.0
default_color = Color( 0.976471, 0.27451, 1, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LineS" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
z_index = -6
points = PoolVector2Array( 0, 0, 0, 10000 )
width = 2.0
default_color = Color( 0.976471, 1, 0.27451, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LineW" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
z_index = -6
points = PoolVector2Array( 0, 0, -10000, 0 )
width = 2.0
default_color = Color( 1, 0.27451, 0.27451, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PositionArrow" parent="." instance=ExtResource( 3 )]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )

[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HelpButton" to="." method="_on_HelpButton_pressed"]
